# led-matrix

./: .clang-format  .clangd  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CMakeLists.txt  CMakePresets.json  FEATURES.md  LED_Matrix_Controller.ini  README.md  UPDATE_SYSTEM_SUMMARY.md  WSL_SYNC_README.md  build.sh  build_upload.sh  cmake.sh  config.old  emulator.sh.example  heaptrack.main.91332.zst  heaptrack.main.97330.zst  install_led_matrix.sh  kill_emulator.sh  massif.out.285375  opencode.json  out  proc_out  review.json  run.sh.example  run_emulator.sh  sync.sh  test_beat_detection.sh  vcpkg-configuration.json  vcpkg.json  wsl_sync.sh
audio-visualizer/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  audio_analyzer.js  config.example.toml  package.json  pnpm-lock.yaml  test_server.py
audio-visualizer/src/: App.tsx  audio_processor.rs  config.rs  frequency_analysis.rs  generate_icon.rs  main.rs  ui.rs
audio-visualizer/src-tauri/: Cargo.toml  tauri.conf.json
audio-visualizer/src-tauri/src/: audio_processor.rs  commands.rs  config.rs  main.rs  network.rs  ui.rs
audio-visualizer/src/components/: AnalysisSettings.tsx  AudioSettings.tsx  ConnectionControls.tsx  StartupSettings.tsx  Visualizer.tsx
audio-visualizer/src/frequency_analyzer/: bark.rs  linear.rs  logarithmic.rs
audio-visualizer/src/hooks/: useAudioData.ts  useDebounce.ts
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  chobs.json  cmake.sh  config.json  dev.sh  gdb.sh  prepare.sh  run.sh  sync.sh  vcpkg.json  watch.sh
cpp/backup/: main_old.cpp
cpp/include/: Scene.h  plugin.h  wrappers.h
cpp/old/: pixel-mover  pixel-mover.cc
cpp/plugins/: CMakeLists.txt  pixelJoint.cpp  pixelJoint.h
cpp/plugins/AmbientScenes/: AmbientScenes.cpp  AmbientScenes.h
cpp/plugins/GameScenes/: GameScenes.cpp  GameScenes.h
cpp/plugins/GithubScenes/: GithubScenes.cpp  GithubScenes.h
cpp/plugins/PixelJoint/: CMakeLists.txt  PixelJoint.cpp  PixelJoint.h  pixelJointConsts.h
cpp/plugins/RGBMatrixAnimations/: RGBMatrixAnimations.cpp  RGBMatrixAnimations.h
cpp/plugins/SpotifyScenes/: SpotifyScenes.cpp  SpotifyScenes.h
cpp/plugins/WeatherOverview/: CMakeLists.txt  Constants.cpp  Constants.h  WeatherOverview.cpp  WeatherOverview.h  WeatherParser.cpp  WeatherParser.h
cpp/plugins/pixelJoint/: PixelJoint.cpp  PixelJoint.h
cpp/resources/: default.json
cpp/shared/: CMakeLists.txt
cpp/shared/include/: Scene.h  logger.hpp  plugin.h  wrappers.h
cpp/shared/resources/: default.json  resources.h.in
cpp/shared/src/: Scene.cpp
cpp/spotify/: authorize.js  package-lock.json  package.json
cpp/src/: Config.cpp  Config.h  canvas.cpp  canvas.h  consts.h  image.cpp  image.h  interrupt.cpp  interrupt.h  main.cpp  pixel_art.cpp  pixel_art.h  resources.h  shared.cpp  shared.h  spotify.cpp  spotify.h  utils.cpp  utils.h
cpp/src/config/: MainConfig.cpp  MainConfig.h  data.cpp  data.h
cpp/src/header_fix/: fix-content-streamer.h
cpp/src/matrix_control/: canvas.cpp  canvas.h  hardware.cpp  hardware.h  image.cpp  image.h  pixel_art.cpp  pixel_art.h  post.cpp  post.h
cpp/src/plugin_loader/: lib_glob.cpp  lib_glob.h  lib_name.cpp  lib_name.h  loader.cpp  loader.h
cpp/src/server/: get.cpp  get.h  method_get.cpp  post.cpp  post.h  server.cpp  server.h  server_utils.cpp  server_utils.h
cpp/src/spotify/: spotify.cpp  track.h
cpp/src/utils/: FrameTimer.h  base64.cpp  base64.h  canvas_consts.h  shared.cpp  shared.h  utils.cpp  utils.h  uuid.h
plugins/: CMakeLists-rpi.txt  CMakeLists.txt
plugins/AmbientScenes/: AmbientScenes.cpp  AmbientScenes.h  CMakeLists.txt  README.md
plugins/AmbientScenes/matrix/: AmbientScenes.cpp  AmbientScenes.h
plugins/AmbientScenes/scenes/: ClockScene.h  CyberpunkCityScene.cpp  CyberpunkCityScene.h  FireScene.cpp  FireScene.h  GeneralSceneDeleter.cpp  GeneralSceneDeleter.h  MetaBlobScene.cpp  MetaBlobScene.h  StarFieldScene.cpp  StarFieldScene.h
plugins/AudioVisualizer/: AudioVisualizer.cpp  AudioVisualizer.h  BEAT_DETECTION.md  CMakeLists.txt  README.md
plugins/AudioVisualizer/desktop/: AudioProcessor.cpp  AudioProcessor.h  AudioVisualizerDesktop.cpp  AudioVisualizerDesktop.h  BeatDetector.cpp  BeatDetector.h  NetworkSender.cpp  NetworkSender.h  audio_processor.cpp  audio_processor.h  channel.h  config.h  record.cpp  record.h  udpBandsPacket.cpp  udpBandsPacket.h
plugins/BasicEffects/: BasicEffects.cpp  BasicEffects.h  CMakeLists.txt
plugins/BasicEffects/matrix/: BasicEffects.cpp  (+1 more)
plugins/ChristmasScenes/: CMakeLists.txt
plugins/Countdown/: CMakeLists.txt
plugins/ExampleScenes/: CMakeLists.txt
plugins/FractalScenes/: CMakeLists.txt  FractalScenes.cpp  FractalScenes.h  README.md
plugins/GameScenes/: CMakeLists.txt  GameScenes.cpp  GameScenes.h  README.md
plugins/GenerativeScenes/: CMakeLists.txt
plugins/GithubScenes/: CMakeLists.txt  GithubScenes.cpp  GithubScenes.h  README.md
plugins/PixelJoint/: CMakeLists.txt  PixelJoint.cpp  PixelJoint.h  README.md
plugins/RGBMatrixAnimations/: CMakeLists.txt  README.md  RGBMatrixAnimations.cpp  RGBMatrixAnimations.h
plugins/ScriptedScenes/: CMakeLists.txt
plugins/Shadertoy/: CMakeLists.txt  README.md
plugins/SpotifyMV/: CMakeLists.txt
plugins/SpotifyScenes/: CMakeLists.txt  README.md  SpotifyScenes.cpp  SpotifyScenes.h  http_handler.cpp  http_handler.h
plugins/Transitions/: CMakeLists.txt
plugins/Video/: CMakeLists.txt
plugins/WeatherOverview/: CMakeLists.txt  Constants.cpp  Constants.h  README.md  WeatherOverview.cpp  WeatherOverview.h  WeatherParser.cpp  WeatherParser.h
rust_old/: Cargo.toml  run.sh  watch-rpi.sh  watch.sh
rust_old/src/: image.rs  led.rs  main.rs  pixel_art.rs
shared/: CMakeLists.txt
shared/common/: CMakeLists.txt
shared/desktop/: CMakeLists.txt
shared/include/: Scene.h  wrappers.h
shared/matrix/: CMakeLists.txt
shared/resources/: default.json
shared/src/: Scene.cpp
wasm/: CMakeLists.txt  README.md
wasm/include/: Magick++.h  canvas.h  graphics.h  led-matrix.h  pixel-mapper.h  thread.h
wasm/runtime/: wasm_runtime.cpp  wasm_scene.cpp  wasm_stubs.cpp
(+964 files in other folders)
